--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Stanislas Bonifetto
+title: Cloud software engineering
+email: stanislas.bonifetto@gmail.com
+website: stanislasbonifetto.github.com
 
 # Social links
 twitter_username: facespics
