add profile image

--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,15 @@ email: stanislas.bonifetto@gmail.com
 website: stanislasbonifetto.github.com
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+# twitter_username: facespics
+github_username:  stanislasbonifetto
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
+# instagram_username: chillwildlife
+linkedin_username: stanislasbonifetto
 # pinterest_username: jekyll
-youtube_username: globalmtb
+# youtube_username: globalmtb
 # googleplus_username: +jekyll
 
 # About Section
