--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: sproogen/resume-theme
+# repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Personal info
@@ -24,9 +24,10 @@ linkedin_username: stanislasbonifetto
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+I am a Java Cloud Software Engineer with 15+ years of experience in development and growing new products.
+My experience in software development goes beyond coding, I appreciate and understand full systems starting from UX passing through development and coming to architecture. My excellent object oriented design, analysis, and testing skills allow me to build applications from the ground up and become productive in a project quickly.
+Lean and agile principles are the pillars of my work flow model, both when I am working individually or leading a group.
+I am able to communicate effectively with technical and non­ technical people at all levels, and I am at ease working on my own or within a team. 
 
 # Projects Section
 # projects_title: Projects
@@ -39,12 +40,8 @@ about_content: | # this will include new lines to allow paragraphs
 
 # More Section
 # more_title: A Little More About Me
-more_content: | # this will include new lines to allow paragraphs
-  Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-   - Rock climbing
-   - Gaming
-   - Knitting
-   - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+# more_content: | # this will include new lines to allow paragraphs
+  
 
 # Footer
 footer_show_references: true
