--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ favicon: images/favicon.ico
 name: Stanislas Bonifetto
 title: Cloud software engineering
 email: stanislas.bonifetto@gmail.com
-website: stanislasbonifetto.github.com
+# website: stanislasbonifetto.github.com
 
 # Social links
 # twitter_username: facespics
