--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,14 @@ linkedin_username: stanislasbonifetto
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am a Java Cloud Software Engineer with 15+ years of experience in development and growing new products.
-  My experience in software development goes beyond coding, I appreciate and understand full systems starting from UX passing through development and coming to architecture. My excellent object oriented design, analysis, and testing skills allow me to build applications from the ground up and become productive in a project quickly.
-  Lean and agile principles are the pillars of my work flow model, both when I am working individually or leading a group.
-  I am able to communicate effectively with technical and non­ technical people at all levels, and I am at ease working on my own or within a team.
+  I am a passionate *Lead Software Engineer and Agile/Lean* advocate with 20+ years of experience in startups and large companies. 
+  Using my strong agile background and excellent technical skills I lead, mentor, and coach teams to build the software of the future with the right technologies used in the right way. 
+  *I solve complex problems decomposing in simple architectures and code* easy to read, and designed with clean code, hexagonal architecture, and TDD. 
+  I am eager to be part of teams and use my experience to help: 
+  - building complex products from scratch
+  - *mentoring developers* on Lean and Agile methodologies and principles, pair programming, clean code, TDD, BDD, microservices, hexagonal and reactive architecture, domain-driven design, event-driven and distributed systems
+  - *keeping the codebase clean and production-ready*
+  - *observing the systems by the Golden Signals* - Latency, Traffic, Errors, and Saturation
 # Projects Section
 # projects_title: Projects
 
