--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ favicon: images/favicon.ico
 
 # Personal info
 name: Stanislas Bonifetto
-title: Cloud software engineering
+title: Lead Software Engineer
 email: stanislas.bonifetto@gmail.com
 # website: stanislasbonifetto.github.com
 
